# electronics_network

./: .env.example  .flake8  README.md  db.sqlite3  electronics  mypy.ini  pyproject.toml
config/: settings.py
network/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
network/fixtures/: seed.json
network/migrations/: 0001_initial.py
tests/: conftest.py  test_admin_action.py  test_api.py  test_models.py
